# SoulLink-HealthSync

./: .gitignore  CMakeLists.txt
mGBA/: soulLink.lua
src/: game_config.hpp  game_registry.cpp  game_registry.hpp  gen3_utils.cpp  gen3_utils.hpp  main.cpp  pokemon_general.hpp  pokerule_cli.cpp  pokerule_cli.hpp
